# sparkWorld-AI-Agent

./: .gitignore  New Text Document.txt  README.md  alembic.ini  config.yaml  docker-compose.yml  main.py  pyproject.toml
 basicKnowledge/: 10coaToolAgent.py  11RaACTandCOTtofillFormat.py  1DeepSeekStream.py  2OpenAI.py  3AddTool.py  4toolDataExtraDemo.py  5pydantic.py  6jsonOutput.py  7StreamToAccelerate.py  8voiceAgent.py  README.md  voiceAgent.md
 basicKnowledge/0python/: 1pythonBase.ipynb  2fastApi.py  3fastapiDoc.py
 basicKnowledge/12mcp/: 1mcpServerDemo.py  2mcpClientDemo.py  3mcpClientWithExitStack.py  4mcpEx.py  5mcpEx.py  7test.py  extrenalAPi.py  mcpBase.py  mcpCode.py  osm_mcp_server.py
 basicKnowledge/13browser/: 1browserBase.py  2PlaywrightVersion.py
 basicKnowledge/9tokenEstimate/: transformersDemo.py
alembic/versions/: 751e5336d902_.py  7871bae9a911_.py
app/: main.py
app/application/errors/: exceptions.py
app/application/services/: app_config_service.py
app/domain/repositories/: uow.py
app/infrastructure/logging/: logging.py
app/infrastructure/storage/: cos.py  postgres.py  redis.py
app/interfaces/endpoints/: minio_test.py  routes.py  status_routes.py
app/interfaces/errors/: exception_handlers.py
app/interfaces/schemas/: base.py
backend/: pyproject.toml
backend/docs/: 1pyproject.toml 高级配置解释.md  2setChildProjectShareVenv.md
core/: config.py
temp/: 14days.md  a2.md  ana.md  charater.md  frontend-14day-plan.md  frontend-analysis.md  frontend.md  qq.md  question.md
temp/hermes/: 1.md  2.md  3.md
temp/hermes/plans/: ANALYSIS-INDEX.zh.md  COMPLETE-SUMMARY.zh.md  CONCEPT-INDEX.zh.md  FILE-INVENTORY.zh.md  LEARNING-INDEX.zh.md  PROJECT-ANALYSIS.zh.md  START-HERE.zh.md  (+34 more)
temp/plan/: 00-from-scratch-creation.md  QUICKSTART.md  README.md  day-01-environment-setup.md  day-02-architecture-deep-dive.md  day-03-docker-and-local-run.md  day-04-05-frontend-basics.md  day-06-layout-ui-integration.md  day-07-09-frontend-integration.md  day-10-11-backend-gateway.md  day-12-langgraph-agents.md  day-13-advanced-features.md  day-14-integration-tests-deployment.md  quick-reference.md
temp/plans/: DeerFlow完整分析报告.md  INDEX.md  QUICK_REFERENCE.md  README.md  README_LEARNING_RESOURCES.md  backendclaude.md  day_01_基础框架和项目结构认知.md  day_02_LangGraph和中间件链深度学习.md  day_03_Sandbox隔离执行系统.md  day_04_工具系统和子Agent.md  day_05_记忆系统和技能系统.md  day_06_模型系统和GatewayAPI.md  day_07_配置系统和部署架构.md  day_08_基础框架搭建.md  day_09-10_中间件链完整实现.md  day_11_Sandbox系统实现.md  day_12_工具和子Agent系统.md  day_13_网关API和模型系统.md  day_14_测试集成和打磨.md  learning_plan_14days.md  sandbox_detailed_analysis.md
tests/: conftest.py  test_async.py  test_base_response_main.py  test_fixture.py  test_parametrize.py  test_temp.py
todo/: CICD.md  need.md  userlogin.md
(+1 files in other folders)
