[project]
name = "sparkworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "edge-tts>=7.2.8",
    "jinja2>=3.1.6",
    "keyboard>=0.13.5",
    "librosa>=0.11.0",
    "openai>=2.30.0",
    "pydantic[email]>=2.12.5",
    "requests>=2.33.1",
    "sentencepiece>=0.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "transformers>=5.4.0",
]
