[project]
name = "sparkworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "browser-use>=0.11.13",
    "chromium>=0.0.0",
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "edge-tts>=7.2.8",
    "fastapi>=0.135.3",
    "filelock>=3.25.2",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "keyboard>=0.13.5",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchainhub>=0.1.21",
    "librosa>=0.11.0",
    "mcp>=1.27.0",
    "minio>=7.2.20",
    "openai>=2.30.0",
    "pkg>=0.2",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "response>=0.5.0",
    "sentencepiece>=0.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.49",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "transformers>=5.4.0",
    "uvicorn[standard]>=0.43.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pkg>=0.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]


[tool.pytest.ini_options]
cache_dir = ".pytest_cache"
addopts = "-s -v"
python_files = "test_*.py *_test.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
