[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langgraph-sdk>=0.3.13",
    "lark-oapi>=1.5.5",
    "markdown-to-mrkdwn>=0.3.2",
    "python-multipart>=0.0.27",
    "python-telegram-bot>=22.7",
    "slack-sdk>=3.41.0",
    "spark",
    "sse-starlette>=3.4.1",
    "uvicorn>=0.46.0",
    "wecom-aibot-python-sdk>=1.0.2",
]

[dependency-groups]
dev = [
    "prompt-toolkit>=3.0.52",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.uv.workspace]
members = [
    "packages/harness",
]

[tool.uv.sources]
spark = { workspace = true }
